--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 }
 
-.navleft{
+.navLeft{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -17,18 +17,18 @@
     
 }
 
-.navleft .content{
+.navLeft .content{
     margin: .5em;
 }
 
 
-.navright{
+.navRight{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
-.navright .content{
+.navRight .content{
     margin: .5em;
 }
 
@@ -40,13 +40,119 @@
     height: 17.5rem;
 }
 
-img{
+.body1 .img{
     align-self: end;
+}
+
+.searchContainer{
+    width: auto;
+
+}
+
+.searchForm{
+    width:auto;
+    display:flex;
+    justify-content: center;
+    margin: 2rem;
+}
+
+.searchForm .img{
+    /* position: absolute;
+    padding-top: .6rem;
+    padding-right:32rem; */
+}
+
+.searchForm .textInput{
+    height:2.5rem;
+    width: 32rem;
+    padding-left:3rem;
+    outline:none;
+
+    border-radius: 2rem;
+    border: 1px solid #DFE1E5 ;
+    background-color: white;
+    background-image: url("/images/searchicon.png");
+    background-repeat: no-repeat;
+    background-size: 2rem;
+    background-position: 2% 60%;
+
+    font-family: arial,sans-serif;
+    font-size: 1rem;
+    
+}
+
+.buttonContainer{
+    display:flex;
+    justify-content: center;
+}
+
+.button{
+    margin: .375rem;
+    width: 7.5rem;
+    height: 2.1rem;
+
+    font-family: arial,sans-serif;
+    font-size: .88rem;
+
+    border-radius:3px;
+    border: none;
+    background-color: #F8F9FA;
+}
+.button2{
+    margin: .375rem;
+    width: 9rem;
+    height: 2.1rem;
+
+    font-family: arial,sans-serif;
+    font-size: .88rem;
+
+    border-radius:3px;
+    border: none;
+    background-color: #F8F9FA;
 }
 
 
 /* footer */
 
+.footerContainer{
+    display:flex;
+    justify-content: space-between;
+
+    font-family: arial,sans-serif;
+    font-size: .88rem;
+
+    position: fixed;
+    bottom:0;
+    width: 100%;
+    height: 2rem;
+    background-color:  #F2F2F2;
+    padding: 5px;
+}
+
+.footerLeft{
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.footerLeft .content{
+    margin: .5em;
+}
+
+.footerMid{
+    display:flex;
+    align-items: center;
+}
+
+.footerRight{
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.footerRight .content{
+    margin: .5em;
+}
 
 /* underline text during hover */
 
@@ -56,4 +162,13 @@ img{
 
 .pointer:hover{
     cursor:pointer;
+}
+
+.shadow:hover{
+    box-shadow:         .5px .5px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.darkCircleBackground:hover{
+    border-radius: 50%;
+    background-color: #F8F9FA;
 }
