--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 .body1{
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
 
     height: 17.5rem;
