--- a/style.css
+++ b/style.css
@@ -151,6 +151,7 @@
     display:flex;
     justify-content: space-evenly;
     align-items: center;
+    margin-right: .5rem;
 }
 
 .footerRight .content{
