--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@
     border-radius: 2rem;
     border: 1px solid #DFE1E5 ;
     background-color: white;
-    background-image: url("/images/searchicon.png");
+    background-image: url("./images/searchicon.png");
     background-repeat: no-repeat;
     background-size: 2rem;
     background-position: 2% 60%;
